ci-cd: adjust to login on acr

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fiap-tech-challenge-03",
+  "name": "fiap-tech-challenge-03-application",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
