--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,6 +3,12 @@ name: CI/CD Pipeline
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
+    paths:
+      - 'deploy/**'
+      - '**.js'
+      - '**.json'
 
 jobs:
   run-unit-tests:
@@ -19,39 +25,52 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn run test
 
-
-  # sonarcloud-analysis:
-  #   name: 🔍 SonarCloud Analysis
-  #   needs: run-unit-tests
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0 
+  sonarcloud-analysis:
+    name: 🔍 SonarCloud Analysis
+    needs: run-unit-tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 
         
-  #     - name: Set up JDK 11
-  #       uses: actions/setup-java@v2
-  #       with:
-  #         java-version: 11
-  #         distribution: 'temurin'
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11
+          distribution: 'temurin'
       
-  #     - name: Cache SonarCloud packages
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: ~/.sonar/cache
-  #         key: ${{ runner.os }}-sonar
-  #         restore-keys: ${{ runner.os }}-sonar
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
       
-  #     - name: SonarCloud Scan
-  #       uses: SonarSource/sonarcloud-github-action@master
-  #       with:
-  #         projectBaseDir: ./
-  #       env:
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: ./
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  check-deploy-folder:
+    name: 📁 Check Deploy Folder
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Check for changes in deploy folder
+        run: |
+          echo "Checking for changes in the 'deploy' folder..."
+          # Add your logic here to check changes in the 'deploy' folder.
+          # This could be linting, schema validation, etc.
+          echo "Check completed."
 
   update-image:
     name: 📝 Update Image
     needs: run-unit-tests
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -74,3 +93,33 @@ jobs:
           docker push $ACR_REGISTRY/$IMAGE_NAME:$VERSION_TAG
           docker tag $ACR_REGISTRY/$IMAGE_NAME:$VERSION_TAG $ACR_REGISTRY/$IMAGE_NAME:latest
           docker push $ACR_REGISTRY/$IMAGE_NAME:latest
+
+  deploy-k8s-structure:
+    name: 🚀 Deploy K8S Structure
+    needs: [update-image, check-deploy-folder]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.event.push.paths == 'deploy/**'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Configure Azure Credentials
+        uses: azure/login@v1
+        with:
+          creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets  .AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":" ${{ secrets.AZURE_TENANT_ID }}"}'
+      - name: Get AKS Credentials
+        run: |
+          az aks get-credentials --resource-group ${{ env.RESOURCE_GROUP_NAME }} --name ${{ env.   AKS_CLUSTER_NAME }} --overwrite-existing --file ${{ github.workspace }}/kubeconfig
+        env:
+          AKS_RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP_NAME }}
+          AKS_CLUSTER_NAME: ${{ secrets.AKS_CLUSTER_NAME }}
+          KUBECONFIG: ${{ github.workspace }}/kubeconfig
+        shell: bash
+      - name: Create ConfigMap
+        run: |
+          kubectl create configmap api-config --from-literal=POSTGRES_URL=${{ secrets.POSTGRES_URL }} --from-literal=MERCADO_PAGO_GENERATE_PAYMENT={{ secrets.MERCADO_PAGO_GENERATE_PAYMENT }} --from-literal=MERCADO_PAGO_WEBHOOK_URL=${{ secrets.MERCADO_PAGO_WEBHOOK_URL }} --from-literal=MERCADO_PAGO_API_HOST=${{ secrets.MERCADO_PAGO_API_HOST }} --from-literal=MERCADO_PAGO_BEARER_TOKEN=${{ secrets.MERCADO_PAGO_BEARER_TOKEN }} --from-literal=MERCADO_PAGO_USER_ID=${{ secrets.MERCADO_PAGO_USER_ID }} --from-literal=MERCADO_PAGO_EXTERNAL_POS_ID=${{ secrets.MERCADO_PAGO_EXTERNAL_POS_ID }} --dry-run=client -o yaml | kubectl apply -f -
+        env:
+          KUBECONFIG: ${{ github.workspace }}/kubeconfig
+      - name: Deploy to Kubernetes
+        run: |
+          export KUBECONFIG=${{ github.workspace }}/kubeconfig
+          kubectl apply -f ./deploy/
+
