--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,19 +54,6 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  check-deploy-folder:
-    name: 📁 Check Deploy Folder
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Check for changes in deploy folder
-        run: |
-          echo "Checking for changes in the 'deploy' folder..."
-          # Add your logic here to check changes in the 'deploy' folder.
-          # This could be linting, schema validation, etc.
-          echo "Check completed."
-
   update-image:
     name: 📝 Update Image
     needs: run-unit-tests
@@ -93,6 +80,30 @@ jobs:
           docker push $ACR_REGISTRY/$IMAGE_NAME:$VERSION_TAG
           docker tag $ACR_REGISTRY/$IMAGE_NAME:$VERSION_TAG $ACR_REGISTRY/$IMAGE_NAME:latest
           docker push $ACR_REGISTRY/$IMAGE_NAME:latest
+
+  check-deploy-folder:
+    name: 📁 Check Deploy Folder
+    if: github.event_name == 'pull_request' && github.event.push.paths == 'deploy/**'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Configure Azure Credentials
+        uses: azure/login@v1
+        with:
+          creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets  .AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":" ${{ secrets.AZURE_TENANT_ID }}"}'
+      - name: Get AKS Credentials
+        run: |
+          az aks get-credentials --resource-group ${{ env.RESOURCE_GROUP_NAME }} --name ${{ env.   AKS_CLUSTER_NAME }} --overwrite-existing --file ${{ github.workspace }}/kubeconfig
+        env:
+          AKS_RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP_NAME }}
+          AKS_CLUSTER_NAME: ${{ secrets.AKS_CLUSTER_NAME }}
+          KUBECONFIG: ${{ github.workspace }}/kubeconfig
+        shell: bash
+      - name: Validate Kubernetes Deployment Configurations
+        run: |
+          kubectl apply --dry-run=client -f ./deploy/ || exit 1
+        env:
+          KUBECONFIG: ${{ github.workspace }}/.kubeconfig
 
   deploy-k8s-structure:
     name: 🚀 Deploy K8S Structure
