--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -83,7 +83,7 @@ jobs:
 
   check-deploy-folder:
     name: 📁 Check Deploy Folder
-    if: github.event_name == 'pull_request' && (contains(github.event.head_commit.modified, 'deploy/') || contains(github.event.head_commit.added, 'deploy/'))
+    if: github.event_name == 'pull_request'
     needs: sonarcloud-analysis
     runs-on: ubuntu-latest
     steps:
@@ -109,7 +109,7 @@ jobs:
   deploy-k8s-structure:
     name: 🚀 Deploy K8S Structure
     needs: [update-image, check-deploy-folder]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.event.push.paths == 'deploy/**'
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -128,6 +128,11 @@ jobs:
       - name: Create ConfigMap
         run: |
           kubectl create configmap api-config --from-literal=POSTGRES_URL=${{ secrets.POSTGRES_URL }} --from-literal=MERCADO_PAGO_GENERATE_PAYMENT={{ secrets.MERCADO_PAGO_GENERATE_PAYMENT }} --from-literal=MERCADO_PAGO_WEBHOOK_URL=${{ secrets.MERCADO_PAGO_WEBHOOK_URL }} --from-literal=MERCADO_PAGO_API_HOST=${{ secrets.MERCADO_PAGO_API_HOST }} --from-literal=MERCADO_PAGO_BEARER_TOKEN=${{ secrets.MERCADO_PAGO_BEARER_TOKEN }} --from-literal=MERCADO_PAGO_USER_ID=${{ secrets.MERCADO_PAGO_USER_ID }} --from-literal=MERCADO_PAGO_EXTERNAL_POS_ID=${{ secrets.MERCADO_PAGO_EXTERNAL_POS_ID }} --dry-run=client -o yaml | kubectl apply -f -
+      - name: Update Deployment Image
+        run: |
+          VERSION_TAG=$(git rev-parse --short HEAD)
+          IMAGE_NAME="${{ secrets.IMAGE_NAME }}:$VERSION_TAG"
+          sed -i "s|IMAGE_PLACEHOLDER|$IMAGE_NAME|g" ./deploy/deployment-api.yaml
         env:
           KUBECONFIG: ${{ github.workspace }}/kubeconfig
       - name: Deploy to Kubernetes
