--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -81,34 +81,34 @@ jobs:
           docker tag $ACR_REGISTRY/$IMAGE_NAME:$VERSION_TAG $ACR_REGISTRY/$IMAGE_NAME:latest
           docker push $ACR_REGISTRY/$IMAGE_NAME:latest
 
-  check-deploy-folder:
-    name: 📁 Check Deploy Folder
-    if: github.event_name == 'pull_request'
-    needs: sonarcloud-analysis
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Configure Azure Credentials
-        uses: azure/login@v1
-        with:
-          creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets  .AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":" ${{ secrets.AZURE_TENANT_ID }}"}'
-      - name: Get AKS Credentials
-        run: |
-          az aks get-credentials --resource-group ${{ env.RESOURCE_GROUP_NAME }} --name ${{ env.   AKS_CLUSTER_NAME }} --overwrite-existing --file ${{ github.workspace }}/kubeconfig
-        env:
-          RESOURCE_GROUP_NAME: ${{ secrets.RESOURCE_GROUP_NAME }}
-          AKS_CLUSTER_NAME: ${{ secrets.AKS_CLUSTER_NAME }}
-          KUBECONFIG: ${{ github.workspace }}/kubeconfig
-        shell: bash
-      - name: Validate Kubernetes Deployment Configurations
-        run: |
-          kubectl apply --dry-run=client -f ./deploy/ || exit 1
-        env:
-          KUBECONFIG: ${{ github.workspace }}/.kubeconfig
+  # check-deploy-folder:
+  #   name: 📁 Check Deploy Folder
+  #   if: github.event_name == 'pull_request'
+  #   needs: sonarcloud-analysis
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Configure Azure Credentials
+  #       uses: azure/login@v1
+  #       with:
+  #         creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets  .AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":" ${{ secrets.AZURE_TENANT_ID }}"}'
+  #     - name: Get AKS Credentials
+  #       run: |
+  #         az aks get-credentials --resource-group ${{ env.RESOURCE_GROUP_NAME }} --name ${{ env.   AKS_CLUSTER_NAME }} --overwrite-existing --file ${{ github.workspace }}/kubeconfig
+  #       env:
+  #         RESOURCE_GROUP_NAME: ${{ secrets.RESOURCE_GROUP_NAME }}
+  #         AKS_CLUSTER_NAME: ${{ secrets.AKS_CLUSTER_NAME }}
+  #         KUBECONFIG: ${{ github.workspace }}/kubeconfig
+  #       shell: bash
+  #     - name: Validate Kubernetes Deployment Configurations
+  #       run: |
+  #         kubectl apply --dry-run=client -f ./deploy/ || exit 1
+  #       env:
+  #         KUBECONFIG: ${{ github.workspace }}/.kubeconfig
 
   deploy-k8s-structure:
     name: 🚀 Deploy K8S Structure
-    needs: [update-image, check-deploy-folder]
+    needs: [update-image]
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
