--- a/deploy/deployment-api.yaml
+++ b/deploy/deployment-api.yaml
@@ -20,11 +20,11 @@ spec:
         imagePullPolicy: Always
         resources:
           limits:
-            cpu: "500m" 
-            memory: "256Mi"
+            cpu: "1" 
+            memory: "512Mi" 
           requests:
-            cpu: "250m"  
-            memory: "128Mi"
+            cpu: "500m" 
+            memory: "256Mi" 
         env:
         - name: DATABASE_URL
           valueFrom:
