--- a/deploy/svc-deployment-api.yaml
+++ b/deploy/svc-deployment-api.yaml
@@ -4,12 +4,10 @@ metadata:
   labels:
     app: deployment-api
   name: svc-api
-  annotations:
-    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
 spec:
   selector: 
     app: deployment-api
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 80
       protocol: TCP
